# advanced-python

hw_1/: pyproject.toml
hw_1/artifacts/: nl.md  tail.md  wc.md
hw_1/src/nl/: nl.py
hw_1/src/tail/: tail.py
hw_1/src/wc/: wc.py
hw_2/: docker-compose.yml
hw_2/artifacts/2/: path_to_pypi.txt
hw_2/texgen/: pyproject.toml
hw_2/texgen/artifacts/: table.tex
hw_2/texgen/src/app/: main.py
hw_2/texgen/src/texgen/: __init__.py  texgen.py
hw_2/texgen_usage/: Dockerfile  pyproject.toml
hw_2/texgen_usage/src/app/: main.py
