[project]
name = "hw-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Eugene Akimov",email = "hyperflex19@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [
    {include = "nl", from = "src"},
    {include = "tail", from = "src"},
    {include = "wc", from = "src"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
