[project]
name = "texgen-usage"
version = "0.1.0"
description = ""
authors = [
    {name = "Eugene Akimov",email = "hyperflex19@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4"
dependencies = [
    "texgen (>=0.1.0,<0.2.0)",
    "pdflatex (>=0.1.3,<0.2.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
